Fix UTF-8 home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
     <title>SpirBoost Store</title>
 </head>
 <body>
-    <h1>Bienvenue sur SpirBoost Store Ì∫ÄÌ≤ö</h1>
-    <p>Le d√©ploiement fonctionne parfaitement Antonio Ì±ë</p>
+    <h1>Bienvenue sur SpirBoost Store</h1>
+    <p>Le d√©ploiement fonctionne parfaitement Antonio</p>
 </body>
 </html>
