--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,6 @@
 </head>
 <body>
     <h1>Bienvenue sur SpirBoost Store íº€í²š</h1>
-    <p>Le dÃ©ploiement fonctionne parfaitement Antonio í±‘</p>
+    <p>Ton site Django fonctionne parfaitement Antonio !</p>
 </body>
 </html>
